--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         </section>
         </div>
 
-        <section class="wallpaper">
-        </section>
+        <section class="wallpaper"></section>
     </main>
 
 </body>
