--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="script.js" defer></script>
+    <script src="javascript/script.js" defer></script>
 
     <title>Riot Games</title>
 </head>
